24 fix: remove vertical scroll on mobile devices

--- a/index.css
+++ b/index.css
@@ -2,4 +2,6 @@ body {
     margin: 0;
     padding: 0;
     background-color: #181a1b;
+    height: 100dvh;
+    overflow: hidden;
 }
